# file-vault

./: .gitignore  AGENTS.md  ANALYSIS.md  Cargo.toml  README.md  pnpm-lock.yaml
.github/workflows/: backend-ci.yml  frontend-ci.yml
apps/api/: Cargo.toml
apps/api/src/: main.rs
apps/web/: index.html  package.json
apps/web/src/: App.tsx
apps/web/src/__tests__/: api.test.tsx
apps/web/src/lib/: api.ts
supabase/: config.toml
supabase/migrations/: 20260622221739_init_schema.sql
